--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -6,6 +6,11 @@ server {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+
+    location /api/ {
+        proxy_pass http://host.docker.internal:8000;
+        proxy_set_header Host $host;
+    }
     
     location / {
         root /usr/share/nginx/html;
