--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -11,6 +11,10 @@ server {
         proxy_pass http://host.docker.internal:8000;
         proxy_set_header Host $host;
     }
+
+    location /media/ {
+        alias /media/;
+    }
     
     location / {
         root /usr/share/nginx/html;
