--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [flake8]
 ignore =
-    W503
+    W503,
+    F811
 exclude =
     tests/,
     */migrations/,
@@ -9,6 +10,8 @@ exclude =
     env/,
     docs/,
     frontend/,
-    infra/
+    infra/,
+    nginx/,
+    backend/venv/,
 per-file-ignores =
     */settings.py:E501
