--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ Django==3.2.16
 django_filter==23.1
 djangorestframework==3.12.4
 djoser==2.1.0
+drf-extra-fields==3.7.0
 python-dotenv==1.0.1
 pillow==11.3.0
 psycopg2-binary==2.9.3
