--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,6 +16,11 @@ server {
       alias /media/;
     }
 
+    location /r/ {
+      proxy_set_header Host $http_host;
+      proxy_pass http://backend:8000/r/;
+    }
+
     location / {
       alias /static/;
       try_files $uri $uri/ /index.html;
